--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 7,
+			"current": 8,
 			"list": [
 				{
 					"id": -1,
@@ -59,7 +59,7 @@
 				{
 					"id": -1,
 					"name": "我的收藏",
-					"pathName": "pages/my-collect/my-collect",
+					"pathName": "pages/my_collect/my_collect",
 					"query": ""
 				},
 				{
@@ -85,6 +85,11 @@
 					"name": "订单详情",
 					"pathName": "pages/order_detail/order_detail",
 					"query": "orderid=2018110516094321635"
+				},
+				{
+					"id": -1,
+					"name": "阅读",
+					"pathName": "pages/reading/reading"
 				}
 			]
 		}
